fixed overall spacing issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,7 @@ html {
 
 .navigation-bar {
   position: fixed;
-  width:50px;
+  width:5vw;
   list-style-type: none;
   height:100vh;
   background-image: linear-gradient(to right,rgba(0,0,0,0.1),rgba(255,0,0,0));
@@ -34,7 +34,7 @@ html {
 display: block;
 color: white;
 font-size: 16px;
-padding: 8px 16px;
+padding: 8px 2vw;
 text-decoration: none;
 }
 
@@ -46,22 +46,34 @@ text-decoration: none;
 }
 
 #firstlink {
-  margin-top:3vh;
   height:54px;
+}
+
+.navigation-bar:hover a{
+  padding-left: 1vw;
 }
 
 .navigation-bar:hover #firstlink{
   height:38px;
 }
 
+#firstlink1 {
+  height:38px;
+  padding-bottom: 0;
+}
+
+.navigation-bar:hover #firstlink1{
+  height:38px;
+  padding-bottom: 8px;
+}
+
 .navline1-top {
   position: relative;
   top: 0;
   margin: 0 auto;
-  height: 20vh;
+  height: 22vh;
   width:1px;
   background-color: white;
-  margin-bottom: 1vh
 }
 
 .navline1-bot {
@@ -75,7 +87,7 @@ text-decoration: none;
 }
 
 .navigation-bar:hover{
-  width:140px;
+  width:11vw;
 }
 
 .navigation-bar:hover #HiddenText{
@@ -193,7 +205,7 @@ color: white;
   display: inline;
   position: absolute;
   color: white;
-  bottom: 1vh;
+  bottom: 5vh;
   width: calc(100vw - ((100vw - 100%)));
   text-align: center;
 }
@@ -248,12 +260,15 @@ color: white;
 }
 
 .belowbutt img{
+  position: absolute;
+  bottom: 1vh;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top:1vh;
   padding-top: 1vh;
   height: 4vh;
   transition: all .15s ease-in;
-  
-
-}
+  }
 
 .belowbutt img:hover{
   cursor: pointer;
